--- a/src/reflection.html
+++ b/src/reflection.html
@@ -67,10 +67,7 @@
           and learned various ways to include JS in HTML and the characteristics of each. I think it was a very meaningful time.
           What I felt was lacking while taking this course was the way to insert JS code according to the situation. 
           Sometimes, when running validation using user-defined tags in HTML in the form of a function &lpar;usually used when using a form&rpar;, 
-          you can implement HTML directly in JS with innerhtml and use the necessary elements &lpar;through direct assignment?&rpar;. 
-          There are useful methods to use, but of course, a modern method that directly deals with the "entire structure" 
-          of the document within an HTML file called DOM is more recommended. However, innerhtml is also used, so I am not used to choosing it yet. 
-          Of course, I have no doubt that if you keep practicing, you will improve a lot. As I do my last assignment, I thank the professor once again.
+          you can implement HTML directly in JS with innerhtml and use the necessary elements.
       </p>
     </main>
 
